--- a/src/qt/pivx/forms/proposalcard.ui
+++ b/src/qt/pivx/forms/proposalcard.ui
@@ -309,7 +309,7 @@
             <item>
              <widget class="QLabel" name="labelYes">
               <property name="styleSheet">
-               <string notr="true">color:#5C4B7D;</string>
+               <string notr="true">color:#0a80ab;</string>
               </property>
               <property name="text">
                <string notr="true">N/A</string>
