--- a/src/qt/pivx.qrc
+++ b/src/qt/pivx.qrc
@@ -23,25 +23,15 @@
         <file alias="splash_regtest">res/images/splash_regtest.png</file>
     </qresource>
     <qresource prefix="/">
-        <file alias="bg-splash">pivx/res/img/bg-splash.svg</file>
         <file alias="bg-splash-png">pivx/res/img/bg-splash.png</file>
-        <file alias="img-logo-pivx-png">pivx/res/img/img-logo-pivx.png</file>
-        <file alias="img-logo-pivx-2x">pivx/res/img/img-logo-pivx@2x.png</file>
-        <file alias="img-logo-pivx-3x">pivx/res/img/img-logo-pivx@3x.png</file>
-        <file alias="img-nav-logo-pivx">pivx/res/img/img-nav-logo-pivx.png</file>
         <file alias="img-qr-test-big">pivx/res/img/img-qr-test-big.png</file>
-        <file alias="img-qr-test">pivx/res/img/img-qr-test.png</file>
-        <file alias="img-welcome-step1">pivx/res/img/img-welcome-step1.png</file>
-        <file alias="img-welcome-step2">pivx/res/img/img-welcome-step2.png</file>
-        <file alias="img-welcome-step3">pivx/res/img/img-welcome-step3.png</file>
-        <file alias="img-welcome-step4">pivx/res/img/img-welcome-step4.png</file>
         <file alias="bg-multi-number-dark">pivx/res/img/bg-multi-number-dark.svg</file>
         <file alias="bg-multi-number">pivx/res/img/bg-multi-number.svg</file>
         <file alias="btn-radio-active">pivx/res/img/btn-radio-active.svg</file>
         <file alias="btn-radio-off">pivx/res/img/btn-radio-off.svg</file>
         <file alias="ic-add-label">pivx/res/img/ic-add-label.svg</file>
         <file alias="ic-add-liliac">pivx/res/img/ic-add-liliac.svg</file>
-        <file alias="ic-add-purple">pivx/res/img/ic-add-purple.svg</file>
+        <file alias="ic-add-blue">pivx/res/img/ic-add-blue.svg</file>
         <file alias="ic-add">pivx/res/img/ic-add.svg</file>
         <file alias="ic-address-book-grey">pivx/res/img/ic-address-book-grey.svg</file>
         <file alias="ic-address-book-white">pivx/res/img/ic-address-book-white.svg</file>
@@ -53,7 +43,7 @@
         <file alias="ic-arrow-drop-up-white">pivx/res/img/ic-arrow-drop-up-white.svg</file>
         <file alias="ic-arrow-drop-up">pivx/res/img/ic-arrow-drop-up.svg</file>
         <file alias="ic-arrow-drop-white-down">pivx/res/img/ic-arrow-drop-white-down.svg</file>
-        <file alias="ic-arrow-purple-down">pivx/res/img/ic-arrow-purple-down.svg</file>
+        <file alias="ic-arrow-blue-down">pivx/res/img/ic-arrow-blue-down.svg</file>
         <file alias="ic-arrow-right-white">pivx/res/img/ic-arrow-right-white.svg</file>
         <file alias="ic-arrow-right">pivx/res/img/ic-arrow-right.svg</file>
         <file alias="ic-arrow-left-white">pivx/res/img/ic-arrow-left-white.svg</file>
@@ -89,7 +79,7 @@
         <file alias="ic-chevron-right">pivx/res/img/ic-chevron-right.svg</file>
         <file alias="ic-chevron-right-liliac">pivx/res/img/ic-chevron-right-liliac.svg</file>
         <file alias="ic-clear-liliac">pivx/res/img/ic-clear-liliac.svg</file>
-        <file alias="ic-clear-purple">pivx/res/img/ic-clear-purple.svg</file>
+        <file alias="ic-clear-blue">pivx/res/img/ic-clear-blue.svg</file>
         <file alias="ic-close-white">pivx/res/img/ic-close-white.svg</file>
         <file alias="ic-close">pivx/res/img/ic-close.svg</file>
         <file alias="ic-coin-piv">pivx/res/img/ic-coin-piv.svg</file>
@@ -186,17 +176,11 @@
         <file alias="img-qr">pivx/res/img/img-qr.svg</file>
         <file alias="ic-contact-arrow-down">pivx/res/img/ic-contact-arrow-down.svg</file>
         <file alias="ic-contact-arrow-down-white">pivx/res/img/ic-contact-arrow-down-white.svg</file>
-        <file alias="ic-arrow-drop-down-purple">pivx/res/img/ic-arrow-drop-down-purple.svg</file>
-        <file alias="ic-arrow-drop-up-purple">pivx/res/img/ic-arrow-drop-up-purple.svg</file>
-        <file alias="bg-welcome-2x">pivx/res/img/bg-welcome@2x.jpg</file>
-        <file alias="bg-welcome-3x">pivx/res/img/bg-welcome@3x.jpg</file>
+        <file alias="ic-arrow-drop-down-blue">pivx/res/img/ic-arrow-drop-down-blue.svg</file>
+        <file alias="ic-arrow-drop-up-blue">pivx/res/img/ic-arrow-drop-up-blue.svg</file>
         <file alias="img-logo-pivx">pivx/res/img/img-logo-pivx.svg</file>
-        <file alias="bg-welcome-svg">pivx/res/img/bg-welcome.svg</file>
-        <file alias="bg-welcome-container">pivx/res/img/bg-welcome-container.svg</file>
         <file alias="bg-welcome">pivx/res/img/bg-welcome.png</file>
         <file alias="bg-welcome-container-png">pivx/res/img/bg-welcome-container.png</file>
-        <file alias="bg-welcome-container-2x">pivx/res/img/bg-welcome-container@2x.png</file>
-        <file alias="bg-welcome-container-3x">pivx/res/img/bg-welcome-container@3x.png</file>
         <file alias="bg-dashboard-banner">pivx/res/img/bg-dashboard-banner.png</file>
         <file alias="ic-check-box-dark-active">pivx/res/img/ic-check-box-dark-active.svg</file>
         <file alias="ic-check-box-indeterminate">pivx/res/img/ic-check-box-indeterminate.svg</file>
