--- a/src/qt/pivx/res/css/style_light.css
+++ b/src/qt/pivx/res/css/style_light.css
@@ -1563,8 +1563,8 @@ QLineEdit[cssClass="edit-primary-book-send"]:hover {
 
 
 QPushButton[cssClass="btn-secundary-clear"] {
-    qproperty-icon: url("://ic-clear-purple") off,
-    url("://ic-clear-purple") on ;
+    qproperty-icon: url("://ic-clear-blue") off,
+    url("://ic-clear-blue") on ;
     qproperty-iconSize: 24px 24px;
     border:  1px solid #33109ccf;
     background-color:#FFFFFF;
@@ -1665,7 +1665,7 @@ QPushButton[cssClass="btn-secundary-copy"]:pressed {
 
 
 QPushButton[cssClass="btn-secundary-add"] {
-    background-image: url("://ic-add-purple");
+    background-image: url("://ic-add-blue");
     background-position:right center;
     background-repeat:no-repeat;
     border:  1px solid #33109ccf;
@@ -1969,7 +1969,7 @@ QComboBox[cssClass="btn-combo-secundary"] {
 }
 
 QComboBox[cssClass="btn-combo-secundary"]::down-arrow {
-    image: url("://ic-arrow-drop-down-purple");
+    image: url("://ic-arrow-drop-down-blue");
     width: 24px;
     height: 24px;
 }
@@ -2570,7 +2570,7 @@ QSpinBox[cssClass="btn-spin-box"], QDoubleSpinBox[cssClass="btn-spin-box"] {
 
 
 QSpinBox[cssClass="btn-spin-box"]::up-button, QDoubleSpinBox[cssClass="btn-spin-box"]::up-button {
-    image: url("://ic-arrow-drop-up-purple");
+    image: url("://ic-arrow-drop-up-blue");
     subcontrol-position: top right; width: 20px; height: 20px;
     border: 0px;
     padding:0px;
@@ -2578,7 +2578,7 @@ QSpinBox[cssClass="btn-spin-box"]::up-button, QDoubleSpinBox[cssClass="btn-spin-
 }
 
 QSpinBox[cssClass="btn-spin-box"]::down-button, QDoubleSpinBox[cssClass="btn-spin-box"]::down-button {
-    image: url("://ic-arrow-drop-down-purple");
+    image: url("://ic-arrow-drop-down-blue");
     subcontrol-position: bottom right; width: 20px; height: 20px;
     border: 0px;
     padding:0px;
@@ -2651,7 +2651,7 @@ QComboBox[cssClass="btn-combo-edit"] {
 }
 
 QComboBox[cssClass="btn-combo-edit"]::down-arrow {
-    image: url("://ic-arrow-drop-down-purple");
+    image: url("://ic-arrow-drop-down-blue");
     width: 24px;
     height: 24px;
 }
@@ -3348,9 +3348,9 @@ QPushButton[cssClass="ic-step-confirm-welcome"] {
     background-image: url("://ic-check-white");
     background-position:center;
     background-repeat:no-repeat;
-    border:  1px solid #6C529D;
+    border:  1px solid #0a80ab;
     border-radius:11px;
-    background-color:#6C529D;
+    background-color:#0a80ab;
 }
 
 *[cssClass="text-title-welcome"] {
@@ -3392,33 +3392,6 @@ QPushButton[cssClass="ic-step-confirm-welcome"] {
     border-radius: 4px;
 }
 
-*[cssClass="container-welcome-step1"] {
-    background-image: url("://img-welcome-step1");
-    background-position:left bottom;
-    background-repeat:no-repeat;
-    background-color: transparent;
-}
-
-*[cssClass="container-welcome-step2"] {
-    background-image: url("://img-welcome-step2");
-    background-position:left bottom;
-    background-repeat:no-repeat;
-    background-color: transparent;
-}
-
-*[cssClass="container-welcome-step3"] {
-    background-image: url("://img-welcome-step3");
-    background-position:left bottom;
-    background-repeat:no-repeat;
-    background-color: transparent;
-}
-
-*[cssClass="container-welcome-step4"] {
-    background-image: url("://img-welcome-step4");
-    background-position:left bottom;
-    background-repeat:no-repeat;
-    background-color: transparent;
-}
 
 QComboBox[cssClass="btn-combo-welcome"] {
     background-color:#0e1d33;
@@ -3429,7 +3402,7 @@ QComboBox[cssClass="btn-combo-welcome"] {
 }
 
 QComboBox[cssClass="btn-combo-welcome"]::down-arrow {
-    image: url("://ic-arrow-purple-down");
+    image: url("://ic-arrow-blue-down");
     width: 42px;
     height: 42px;
 }
