[GUI] Change RowColor/SVGs
0f0b16  -> 192638
423E4A  -> 3c495c
372A4C  -> 2b4163
4C425F  -> 40526e

--- a/src/qt/pivx/res/css/style_dark.css
+++ b/src/qt/pivx/res/css/style_dark.css
@@ -716,7 +716,7 @@ QPushButton[cssClass="btn-check-status-staking"] {
 
 QPushButton[cssClass="btn-check-text"] {
     color:#7f7c87;
-    background-color:#372A4C;
+    background-color:#2b4163;
     font-size:18px;
     border-bottom:2px solid #0a80ab;
 }
@@ -865,7 +865,7 @@ QPushButton[cssClass="btn-check-lock-sub-menu-staking"]:hover {
 
 
 *[cssClass="top-sub-menu"] {
-    background-color:#4C425F;
+    background-color:#40526e;
 }
 
 
@@ -1882,10 +1882,10 @@ HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
 }
 
 *[cssClass="text-stake-mn-disable"] {
-    color:#423E4A;
+    color:#3c495c;
     font-size:16px;
     padding:10px;
-    border-bottom: 5px solid #423E4A;
+    border-bottom: 5px solid #3c495c;
 }
 
 *[cssClass="legend-chart"] {
