[GUI] purple -> blue

--- a/src/qt/pivx/res/css/style_dark.css
+++ b/src/qt/pivx/res/css/style_dark.css
@@ -41,12 +41,12 @@ HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
     background-color:#B3FFFFFF;
 }
 
-*[cssClass="container-purple"] {
+*[cssClass="container-blue"] {
     background-color:#0a80ab;
     border:  0;
 }
 
-*[cssClass="container-border-purple"] {
+*[cssClass="container-border-blue"] {
     background-color:#212121;
     border:  1px solid #0a80ab;
     border-radius:2px;
@@ -894,7 +894,7 @@ QProgressBar[cssClass="progress-sync"]::chunk:horizontal {
 HH       LISTS ELEMENTS
 HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
 
-*[cssClass="text-list-title-purple"] {
+*[cssClass="text-list-title-blue"] {
     color:#13b9f6;
     font-size:20px;
 }
@@ -914,7 +914,7 @@ HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
     font-size:16px;
 }
 
-*[cssClass="text-list-body1-purple"] {
+*[cssClass="text-list-body1-blue"] {
     color:#13b9f6;
     font-size:14px;
 }
@@ -1036,7 +1036,7 @@ HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
     font-size:22px;
 }
 
-*[cssClass="btn-title-purple"] {
+*[cssClass="btn-title-blue"] {
     color:#0a80ab;
     font-size:22px;
 }
@@ -1087,12 +1087,12 @@ HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
     font-size:18px;
 }
 
-*[cssClass="text-main-purple"] {
+*[cssClass="text-main-blue"] {
     color:#13b9f6;
     font-size:17px;
 }
 
-*[cssClass="text-title-purple"] {
+*[cssClass="text-title-blue"] {
     color:#0a80ab;
     font-size:22px;
 }
@@ -2465,12 +2465,12 @@ QCheckBox::indicator:checked[cssClass="check-vote"] {
 HH       SELECT MASTER NODE
 HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
 
-*[cssClass="text-title-purple"] {
+*[cssClass="text-title-blue"] {
     color: #0a80ab;
     font-size: 14px;
 }
 
-*[cssClass="text-purple"] {
+*[cssClass="text-blue"] {
     color: #0a80ab;
     font-size: 14px;
     padding-left: 8px;
@@ -2855,7 +2855,7 @@ QScrollBar::top-arrow:horizontal, QScrollBar::bottom-arrow:horizontal
 HH       DIALOG MASTER NODE
 HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
 
-*[cssClass="line-purple"] {
+*[cssClass="line-blue"] {
     background-color:#0a80ab;
 }
 
