--- a/src/qt/pivx/settings/forms/settingsfaqwidget.ui
+++ b/src/qt/pivx/settings/forms/settingsfaqwidget.ui
@@ -342,7 +342,7 @@
                   <enum>Qt::NoFocus</enum>
                  </property>
                  <property name="text">
-                  <string notr="true">https://www.PIVX.org</string>
+                  <string notr="true">https://www.pcoin.dev</string>
                  </property>
                 </widget>
                </item>
