[GUI] Edit text-stake-pcoin-disable

--- a/src/qt/pcoin/res/css/style_dark.css
+++ b/src/qt/pcoin/res/css/style_dark.css
@@ -1868,10 +1868,10 @@ HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
 }
 
 *[cssClass="text-stake-pcoin-disable"] {
-    color:#69656F;
+    color:#29384f;
     font-size:16px;
     padding:10px;
-    border-bottom: 5px solid #69656F;
+    border-bottom: 5px solid #29384f;
 }
 
 *[cssClass="text-stake-mn"] {
