--- a/src/qt/pcoin/forms/topbar.ui
+++ b/src/qt/pcoin/forms/topbar.ui
@@ -125,67 +125,21 @@
             </item>
             <item>
              <widget class="QLabel" name="labelTrans">
-              <property name="text">
-               <string>transparent</string>
-              </property>
              </widget>
             </item>
-            <item>
-             <spacer name="horizontalSpacer_11">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeType">
-               <enum>QSizePolicy::Fixed</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>15</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-            <item alignment="Qt::AlignVCenter">
-             <widget class="QLabel" name="typeSpacerTop">
-              <property name="minimumSize">
-               <size>
-                <width>1</width>
-                <height>30</height>
-               </size>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>1</width>
-                <height>30</height>
-               </size>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">background-color:white;
-padding:0px;
-border:none;</string>
-              </property>
-              <property name="text">
-               <string/>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <spacer name="horizontalSpacer_12">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeType">
-               <enum>QSizePolicy::Fixed</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>15</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
+         <item>
+          <spacer name="horizontalSpacer">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
             <item alignment="Qt::AlignTop">
              <widget class="QLabel" name="labelAmountTopShieldedPcoin">
               <property name="minimumSize">
@@ -201,9 +155,6 @@ border:none;</string>
             </item>
             <item>
              <widget class="QLabel" name="labelShield">
-              <property name="text">
-               <string>shielded</string>
-              </property>
              </widget>
             </item>
            </layout>
