--- a/src/qt/pcoin/res/css/style_light.css
+++ b/src/qt/pcoin/res/css/style_light.css
@@ -414,12 +414,27 @@ HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
 }
 
 *[cssClass="amount-small-topbar"] {
-    color:#FFFFFF;
+    color:#ffe100;
     font-size:17px;
 }
 
-*[cssClass="amount-small-popup"] {
-    color:#FFFFFF;
+*[cssClass="amount-labelAmountTopPcoin"] {
+    color: green;
+    font-size:17px;
+}
+
+*[cssClass="amount-labelAmountTopShieldedPcoin"] {
+    color: #0a80ab;
+    font-size:17px;
+}
+
+*[cssClass="amount-small-popup-transparen"] {
+    color:green;
+    font-size:17px;
+}
+
+*[cssClass="amount-small-popup-shielded"] {
+    color:#0a80ab;
     font-size:17px;
 }
 
@@ -2936,7 +2951,7 @@ HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/
 }
 
 *[cssClass="container-popup"] {
-    background-color:#212121;
+    background-color:#b0212121;
     border-radius:14px;
     border:1px solid #13b9f6;
 }
